Fix: info container height on small devices

--- a/src/sections/hero/Hero.module.css
+++ b/src/sections/hero/Hero.module.css
@@ -98,6 +98,7 @@
 	@media (width < 1024px) {
 		padding-inline: 0;
 		padding-bottom: 0;
+		height: 22svh;
 	}
 
 	.infoInner {
@@ -112,7 +113,6 @@
 	.adressContainer,
 	.hoursContainer {
 		padding-inline: 1rem;
-		/* padding-block: 4rem; */
 		width: 50%;
 		display: flex;
 		flex-direction: column;
